# esp-box-emu

./: .gitignore  .gitmodules  CMakeLists.txt  FORK_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PICO8_PR_PROPOSAL.md  README.md  box_notes.md  controller.py  metadata.csv  old_docs.md  partitions.csv  parts.md  patches.sh  sdkconfig.defaults  suppressions.txt
components/box-emu/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/box-emu-hal/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/box-emu-hal/include/: ads1x15.h  audio_task.hpp  battery.hpp  box.hpp  box_3.hpp  box_emu_hal.hpp  emu_v0.hpp  emu_v1.hpp  fs_init.hpp  hal.hpp  hal_events.hpp  hal_i2c.hpp  i2c.hpp  i2s_audio.h  input.h  input_state.hpp  joypad_buttons.hpp  lvgl_inputs.h  mmap.hpp  spi_lcd.h  statistics.hpp  usb.hpp  video_setting.hpp  video_task.hpp
components/box-emu-hal/src/: audio_task.cpp  battery.cpp  box_emu_hal.cpp  fs_init.cpp  hal_i2c.cpp  i2c.cpp  i2s_audio.cpp  input.cpp  mmap.cpp  spi_lcd.cpp  statistics.cpp  usb.cpp  video_setting.cpp  video_task.cpp
components/box-emu/example/: CMakeLists.txt  README.md  sdkconfig.defaults
components/box-emu/example/main/: CMakeLists.txt  box_emu_example.cpp
components/box-emu/include/: battery_info.hpp  box-emu.hpp  emu_v0.hpp  emu_v1.hpp  fs_init.hpp  gamepad_state.hpp  hal_events.hpp  input_state.hpp  make_color.h  mmap.hpp  video_setting.hpp
components/box-emu/src/: battery.cpp  box-emu.cpp  hal_i2c.cpp  input.cpp  make_color.cpp  mmap.cpp  spi_lcd.cpp  video_task.cpp
components/doom/: CMakeLists.txt  linker.lf
components/doom/include/: doom.hpp
components/doom/prboom/: am_map.c  d_deh.c  d_deh.h  d_main.c  d_main.h  dbopl.c  dbopl.h  doomstat.c  doomstat.h  f_wipe.c  g_game.c  g_game.h  hu_stuff.c  info.c  info.h  lprintf.c  m_argv.c  m_argv.h  m_cheat.c  m_cheat.h  m_menu.c  m_misc.c  opl.c  p_enemy.c  p_inter.c  p_map.c  p_maputl.c  p_mobj.c  p_pspr.c  p_setup.c  p_switch.c  r_bsp.c  r_bsp.h  r_draw.c  r_draw.h  r_fps.c  r_main.c  r_main.h  r_plane.c  r_plane.h  (+15 more)
components/doom/prboom/docs/: DMSPEC16.txt
components/doom/src/: doom.cpp  doom_shared_memory.cpp
components/gameboycore/: CMakeLists.txt
components/gameboycore/include/gameboycore/: alu.h  apu.h  cartinfo.h  channel.h  cpu.h  gameboycore.h  gameboycore_api.h  gpu.h  instruction.h  interrupt_provider.h  joypad.h  link.h  link_cable.h  mbc.h  mbc1.h  mbc2.h  mbc3.h  mbc5.h  memorymap.h  mmu.h  oam.h  opcode_cycles.h  opcodeinfo.h  palette.h  pixel.h  sprite.h  tile.h  tilemap.h  tileram.h  time.h  timer.h
components/gameboycore/src/: alu.cpp  apu.cpp  bitutil.h  cartinfo.cpp  cpu.cpp  gameboycore.cpp  gpu.cpp  instruction.cpp  joypad.cpp  link.cpp  link_cable.cpp  mbc.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  mmu.cpp  oam.cpp  opcodeinfo.cpp  shiftrotate.cpp  shiftrotate.h  tilemap.cpp  tileram.cpp  timer.cpp
components/gbc/: CMakeLists.txt  linker.lf
components/gbc/gnuboy/src/: cpu.c  emu.c  fastmem.c  hw.c  lcd.c  lcdc.c  loader.c  mem.c  save.c  sound.c
components/gbc/include/: gameboy.hpp  gbc_shared_memory.hpp
components/gbc/src/: gameboy.cpp  gbc_shared_memory.cpp
components/genesis/: CMakeLists.txt  linker.lf
components/genesis/include/: genesis.hpp  genesis_dualcore.h  genesis_shared_memory.hpp  z80_shared_memory.hpp
components/genesis/src/: genesis.cpp  genesis_shared_memory.cpp  z80_shared_memory.cpp
components/gnuboy/: CMakeLists.txt  emu.c  loader.c
components/gnuboy/include/: lcd.h  loader.h
components/gnuboy/include/gnuboy/: cpu.h  cpuregs.h  fastmem.h  gnuboy.h  hw.h  noise.h  regs.h
components/gnuboy/src/: cpu.c  debug.c  emu.c  events.c  exports.c  inflate.c  keytable.c  lcd.c  lcdc.c  loader.c  mem.c  palette.c  path.c  rccmds.c  rcfile.c  rckeys.c  rcvars.c  refresh.c  rtc.c  sound.c
components/libgbc/: CMakeLists.txt
components/libgbc/include/: apu.hpp  common.hpp  cpu.hpp  generators.hpp  gpu.hpp  instruction.hpp  interrupt.hpp  io.hpp  machine.hpp  mbc.hpp  mbc1m.hpp  mbc3.hpp  mbc5.hpp  memory.hpp  printers.hpp  registers.hpp  sprite.hpp  tiledata.hpp  tracing.hpp
components/libgbc/src/: apu.cpp  cpu.cpp  debug.cpp  gpu.cpp  instructions.cpp  io.cpp  io_regs.cpp  machine.cpp  mbc.cpp  memory.cpp
components/msx/: CMakeLists.txt
components/msx/fmsx/: msxfix.c
components/msx/include/: msx.hpp
components/msx/src/: msx.cpp
components/nes/: CMakeLists.txt
components/nes/include/: nes.hpp  nes_external.h  nes_shared_memory.h
components/nes/nofrendo/: bitmap.c  event.c  intro.c  memguard.c  nofrendo.c  noftypes.h  osd.h  vid_drv.c
components/nes/src/: nes.cpp  nes_shared_memory.c  video_audio.c  video_audio.cpp
components/nofrendo/: CMakeLists.txt  bitmap.c  config.c  intro.c  memguard.h  nofrendo.c  osd.h
components/nofrendo/cpu/: nes6502.c
components/nofrendo/nes/: nes.c  nes.h  nes_mmc.c  nes_ppu.c  nes_rom.c  nesstate.c  nesstate.h
components/nofrendo/sndhrdw/: nes_apu.c
components/pico8/: CMakeLists.txt  README.md
components/pico8/include/: pico8.hpp
components/pico8/src/: pico8.cpp
components/sms/: CMakeLists.txt
components/sms/include/: sms.hpp
components/sms/smsplus/: CMakeLists.txt  PORTING  config.c  config.h  hvc.c  hvc.h  loadrom.c  loadrom.h  memz80.c  memz80.h  pio.c  render.c  render.h  shared.h  sms.c  sms.h  state.c  system.c  system.h  tms.c  vdp.c  vdp.h
components/sms/src/: sms.cpp
components/sms/teensysms/: AudioPlaySystem.cpp  emuapi.cpp  emuapi.h  fmopl.c  memory.c  memory.h  render.c  shared.h  sms.c  sms.h  smslut.h  system.c  system.h  vdp.h  wrapemu.cpp  wrapemu.h  z80.c
ecad/: bom.csv  (+25 more)
main/: CMakeLists.txt  Kconfig.projbuild  button_handlers.hpp  cart.cpp  cart.hpp  carts.hpp  carts_integration_example.hpp  doom_cart.hpp  fs_init.cpp  fs_init.hpp  gameboy.cpp  gameboy.hpp  gbc_cart.hpp  genesis_cart.hpp  gui.hpp  heap_utils.hpp  idf_component.yml  lv_port_fs.c  lv_port_fs.h  main.cpp  mmap.cpp  mmap.hpp  msx_cart.hpp  nes.cpp  nes.hpp  nes_cart.hpp  pico8_cart.hpp  rom_info.cpp  rom_info.hpp  sms_cart.hpp  string_utils.hpp
(+459 files in other folders)
